--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,27 +1,54 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Решение расчетно-графичкской работы №1 \"Изучение парной регрессии\"\n",
+    "### Студент: Кудрявцев Эдуард Сергеевич, M3335, 354409"
+   ],
+   "id": "6ff6fc3b72de8423"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:11:59.972899Z",
-     "start_time": "2025-10-23T19:11:59.965092Z"
+     "end_time": "2025-10-23T19:23:25.074638Z",
+     "start_time": "2025-10-23T19:23:25.063970Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy.stats as stats"
+    "import scipy.stats as stats\n",
+    "import statsmodels.api as sm\n",
+    "import statsmodels.formula.api as smf\n",
+    "import numpy as np\n",
+    "\n",
+    "from numpy import fabs, sqrt, arctanh, tanh"
    ],
-   "id": "84efaa87500d988a",
+   "id": "ff13c546717122db",
    "outputs": [],
-   "execution_count": 422
+   "execution_count": 458
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Задание 1\n",
+    "В качестве dataset'а были взяты погодные показания в венгерском городе Сегеде начала 2006 года\n",
+    "\n",
+    "Ссылка на источник: https://www.kaggle.com/datasets/budincsevity/szeged-weather\n",
+    "\n",
+    "Главным объектом анализа была зависимость показателя \"Ощущаемая температура\" от реальной температуры"
+   ],
+   "id": "3333ce24f956af8f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.159253Z",
-     "start_time": "2025-10-23T19:11:59.997830Z"
+     "end_time": "2025-10-23T19:23:25.245774Z",
+     "start_time": "2025-10-23T19:23:25.101550Z"
     }
    },
    "cell_type": "code",
@@ -34,7 +61,7 @@
     "y_values = to_choose['Apparent Temperature (C)']\n",
     "to_choose"
    ],
-   "id": "4ff153406fc84abe",
+   "id": "40d57c87f43da5d",
    "outputs": [
     {
      "name": "stdout",
@@ -305,18 +332,24 @@
        "</div>"
       ]
      },
-     "execution_count": 423,
+     "execution_count": 459,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 423
+   "execution_count": 459
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Задание 2",
+   "id": "341005265aef6e78"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.259213Z",
-     "start_time": "2025-10-23T19:12:00.191257Z"
+     "end_time": "2025-10-23T19:23:25.328054Z",
+     "start_time": "2025-10-23T19:23:25.282123Z"
     }
    },
    "cell_type": "code",
@@ -340,7 +373,13 @@
      }
     }
    ],
-   "execution_count": 424
+   "execution_count": 460
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "По корреляционному облаку наблюдаем возможную тесную прямую линейную связь между показателями",
+   "id": "2fdb742a4204d00b"
   },
   {
    "metadata": {},
@@ -361,14 +400,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.310127Z",
-     "start_time": "2025-10-23T19:12:00.298959Z"
+     "end_time": "2025-10-23T19:23:25.371791Z",
+     "start_time": "2025-10-23T19:23:25.363838Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from numpy import fabs, sqrt, arctanh, tanh\n",
-    "\n",
     "p_value = 0.05  # Уровень значимости\n",
     "\n",
     "# Проверка нормальности\n",
@@ -407,7 +444,7 @@
      ]
     }
    ],
-   "execution_count": 425
+   "execution_count": 461
   },
   {
    "metadata": {},
@@ -418,15 +455,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.337343Z",
-     "start_time": "2025-10-23T19:12:00.324743Z"
+     "end_time": "2025-10-23T19:23:25.413454Z",
+     "start_time": "2025-10-23T19:23:25.407184Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import statsmodels.api as sm\n",
-    "import numpy as np\n",
-    "\n",
     "x_for_regression = sm.add_constant(x_values)\n",
     "model = sm.OLS(y_values, x_for_regression).fit()\n",
     "a = model.params['const']\n",
@@ -473,13 +507,13 @@
      ]
     }
    ],
-   "execution_count": 426
+   "execution_count": 462
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.430004Z",
-     "start_time": "2025-10-23T19:12:00.376641Z"
+     "end_time": "2025-10-23T19:23:25.485048Z",
+     "start_time": "2025-10-23T19:23:25.450468Z"
     }
    },
    "cell_type": "code",
@@ -514,7 +548,7 @@
      }
     }
    ],
-   "execution_count": 427
+   "execution_count": 463
   },
   {
    "metadata": {},
@@ -533,8 +567,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.499919Z",
-     "start_time": "2025-10-23T19:12:00.461362Z"
+     "end_time": "2025-10-23T19:23:25.551182Z",
+     "start_time": "2025-10-23T19:23:25.514718Z"
     }
    },
    "cell_type": "code",
@@ -566,13 +600,13 @@
      }
     }
    ],
-   "execution_count": 428
+   "execution_count": 464
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.525314Z",
-     "start_time": "2025-10-23T19:12:00.515515Z"
+     "end_time": "2025-10-23T19:23:25.562860Z",
+     "start_time": "2025-10-23T19:23:25.555684Z"
     }
    },
    "cell_type": "code",
@@ -600,7 +634,7 @@
      ]
     }
    ],
-   "execution_count": 429
+   "execution_count": 465
   },
   {
    "metadata": {},
@@ -611,14 +645,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.544514Z",
-     "start_time": "2025-10-23T19:12:00.534195Z"
+     "end_time": "2025-10-23T19:23:25.577894Z",
+     "start_time": "2025-10-23T19:23:25.568267Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import statsmodels.formula.api as smf\n",
-    "\n",
     "model_quadratic = smf.ols('y ~ x + I(x**2)', pandas.DataFrame({'x': x_values, 'y': y_values})).fit()\n",
     "\n",
     "model_cubic = smf.ols('y ~ x + I(x**2) + I(x**3)', pandas.DataFrame({'x': x_values, 'y': y_values})).fit()\n",
@@ -632,13 +664,13 @@
    ],
    "id": "b04002d62925efe3",
    "outputs": [],
-   "execution_count": 430
+   "execution_count": 466
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.557641Z",
-     "start_time": "2025-10-23T19:12:00.552592Z"
+     "end_time": "2025-10-23T19:23:25.584778Z",
+     "start_time": "2025-10-23T19:23:25.582141Z"
     }
    },
    "cell_type": "code",
@@ -664,13 +696,13 @@
      ]
     }
    ],
-   "execution_count": 431
+   "execution_count": 467
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.569689Z",
-     "start_time": "2025-10-23T19:12:00.567068Z"
+     "end_time": "2025-10-23T19:23:25.599160Z",
+     "start_time": "2025-10-23T19:23:25.595101Z"
     }
    },
    "cell_type": "code",
@@ -697,13 +729,13 @@
      ]
     }
    ],
-   "execution_count": 432
+   "execution_count": 468
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T19:12:00.622742Z",
-     "start_time": "2025-10-23T19:12:00.577598Z"
+     "end_time": "2025-10-23T19:23:25.664862Z",
+     "start_time": "2025-10-23T19:23:25.608954Z"
     }
    },
    "cell_type": "code",
@@ -737,7 +769,7 @@
      }
     }
    ],
-   "execution_count": 433
+   "execution_count": 469
   },
   {
    "metadata": {},
