--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -12,8 +12,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:41.529147Z",
-     "start_time": "2025-10-23T20:24:41.513920Z"
+     "end_time": "2025-10-23T21:03:56.835170Z",
+     "start_time": "2025-10-23T21:03:55.442612Z"
     }
    },
    "cell_type": "code",
@@ -29,7 +29,7 @@
    ],
    "id": "ff13c546717122db",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -47,13 +47,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:41.714026Z",
-     "start_time": "2025-10-23T20:24:41.550123Z"
+     "end_time": "2025-10-23T21:03:56.992130Z",
+     "start_time": "2025-10-23T21:03:56.848849Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "df = pandas.read_csv('weatherHistory.csv')\n",
+    "df = pandas.read_csv('../data/weatherHistory.csv')\n",
     "print(len(df))\n",
     "x_title = 'Temperature (C)'\n",
     "to_choose = df.head(300)\n",
@@ -332,12 +332,12 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -348,8 +348,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:41.836107Z",
-     "start_time": "2025-10-23T20:24:41.758899Z"
+     "end_time": "2025-10-23T21:03:57.096625Z",
+     "start_time": "2025-10-23T21:03:57.029411Z"
     }
    },
    "cell_type": "code",
@@ -373,7 +373,7 @@
      }
     }
    ],
-   "execution_count": 15
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -400,8 +400,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:41.878250Z",
-     "start_time": "2025-10-23T20:24:41.867048Z"
+     "end_time": "2025-10-23T21:03:57.133464Z",
+     "start_time": "2025-10-23T21:03:57.126746Z"
     }
    },
    "cell_type": "code",
@@ -444,7 +444,7 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -455,8 +455,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:41.928714Z",
-     "start_time": "2025-10-23T20:24:41.914304Z"
+     "end_time": "2025-10-23T21:03:57.171613Z",
+     "start_time": "2025-10-23T21:03:57.164087Z"
     }
    },
    "cell_type": "code",
@@ -507,13 +507,13 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:42.001288Z",
-     "start_time": "2025-10-23T20:24:41.966725Z"
+     "end_time": "2025-10-23T21:03:57.245425Z",
+     "start_time": "2025-10-23T21:03:57.210489Z"
     }
    },
    "cell_type": "code",
@@ -548,7 +548,7 @@
      }
     }
    ],
-   "execution_count": 18
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -567,8 +567,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:42.070348Z",
-     "start_time": "2025-10-23T20:24:42.031280Z"
+     "end_time": "2025-10-23T21:03:57.310272Z",
+     "start_time": "2025-10-23T21:03:57.272244Z"
     }
    },
    "cell_type": "code",
@@ -600,13 +600,13 @@
      }
     }
    ],
-   "execution_count": 19
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:42.113884Z",
-     "start_time": "2025-10-23T20:24:42.103603Z"
+     "end_time": "2025-10-23T21:03:57.329291Z",
+     "start_time": "2025-10-23T21:03:57.316364Z"
     }
    },
    "cell_type": "code",
@@ -634,7 +634,7 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -645,8 +645,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:42.136654Z",
-     "start_time": "2025-10-23T20:24:42.124257Z"
+     "end_time": "2025-10-23T21:03:57.368027Z",
+     "start_time": "2025-10-23T21:03:57.353044Z"
     }
    },
    "cell_type": "code",
@@ -664,7 +664,7 @@
    ],
    "id": "b04002d62925efe3",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -675,8 +675,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:42.148283Z",
-     "start_time": "2025-10-23T20:24:42.143016Z"
+     "end_time": "2025-10-23T21:03:57.380318Z",
+     "start_time": "2025-10-23T21:03:57.375348Z"
     }
    },
    "cell_type": "code",
@@ -700,7 +700,7 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -711,8 +711,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:42.164082Z",
-     "start_time": "2025-10-23T20:24:42.157165Z"
+     "end_time": "2025-10-23T21:03:57.397840Z",
+     "start_time": "2025-10-23T21:03:57.390012Z"
     }
    },
    "cell_type": "code",
@@ -737,13 +737,13 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-23T20:24:42.221442Z",
-     "start_time": "2025-10-23T20:24:42.171190Z"
+     "end_time": "2025-10-23T21:03:57.467093Z",
+     "start_time": "2025-10-23T21:03:57.415841Z"
     }
    },
    "cell_type": "code",
@@ -777,7 +777,7 @@
      }
     }
    ],
-   "execution_count": 24
+   "execution_count": 12
   },
   {
    "metadata": {},
