Updated notebook location

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -53,7 +53,7 @@
    },
    "cell_type": "code",
    "source": [
-    "df = pandas.read_csv('../data/weatherHistory.csv')\n",
+    "df = pandas.read_csv('data/weatherHistory.csv')\n",
     "print(len(df))\n",
     "x_title = 'Temperature (C)'\n",
     "to_choose = df.head(300)\n",
