--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -58,8 +58,7 @@
     "x_title = 'Temperature (C)'\n",
     "to_choose = df.head(300)\n",
     "x_values = to_choose['Temperature (C)']\n",
-    "y_values = to_choose['Apparent Temperature (C)']\n",
-    "to_choose"
+    "y_values = to_choose['Apparent Temperature (C)']"
    ],
    "id": "40d57c87f43da5d",
    "outputs": [
