Replaced ^{*} with \hat for less markdown confusion

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,8 +12,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.389848Z",
-     "start_time": "2025-10-30T00:30:35.386848Z"
+     "end_time": "2025-10-30T00:38:37.035334Z",
+     "start_time": "2025-10-30T00:38:36.089702Z"
     }
    },
    "cell_type": "code",
@@ -29,7 +29,7 @@
    ],
    "id": "ff13c546717122db",
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -47,8 +47,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.499102Z",
-     "start_time": "2025-10-30T00:30:35.391876Z"
+     "end_time": "2025-10-30T00:38:37.149075Z",
+     "start_time": "2025-10-30T00:38:37.041584Z"
     }
    },
    "cell_type": "code",
@@ -62,7 +62,7 @@
    ],
    "id": "40d57c87f43da5d",
    "outputs": [],
-   "execution_count": 62
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -73,8 +73,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.554609Z",
-     "start_time": "2025-10-30T00:30:35.503107Z"
+     "end_time": "2025-10-30T00:38:37.226647Z",
+     "start_time": "2025-10-30T00:38:37.159151Z"
     }
    },
    "cell_type": "code",
@@ -101,7 +101,7 @@
      }
     }
    ],
-   "execution_count": 63
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -175,15 +175,15 @@
     "\n",
     "### Доверительный интервал для него будет вычисляться с помощью Z-преобразования Фишера\n",
     "\n",
-    "$th( arcth(r^{*}) - \\dfrac{u_{\\gamma}}{\\sqrt{n-3}} ) < r_{x, y} < th( arcth(r^{*}) + \\dfrac{u_{\\gamma}}{\\sqrt{n-3}} )$, где $u_{\\gamma}$ - квантиль стандартного нормального распределения уровня $1-\\dfrac{\\alpha}{2}$"
+    "$th( arcth(\\hat{r}) - \\dfrac{u_{\\gamma}}{\\sqrt{n-3}} ) < r_{x, y} < th( arcth(\\hat{r}) + \\dfrac{u_{\\gamma}}{\\sqrt{n-3}} )$, где $u_{\\gamma}$ - квантиль стандартного нормального распределения уровня $1-\\dfrac{\\alpha}{2}$"
    ],
    "id": "1e96af1137a4a0ba"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.569603Z",
-     "start_time": "2025-10-30T00:30:35.564612Z"
+     "end_time": "2025-10-30T00:38:37.240623Z",
+     "start_time": "2025-10-30T00:38:37.235655Z"
     }
    },
    "cell_type": "code",
@@ -228,7 +228,7 @@
      ]
     }
    ],
-   "execution_count": 64
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -254,7 +254,7 @@
     "\n",
     "$H_1: D_{факт} \\neq D_{остат}$ Модель статистически значима\n",
     "\n",
-    "Статистика критерия: $F_н=\\dfrac{D_{факт}}{D_{остат}}=\\dfrac{RSS/m}{ESS/(n-m-1)}$, где m - количество факторов$(m=1)$. $RSS= \\sum (y_i^{*}-y_{avg})^2$ $ESS= \\sum (y_i - y_i^{*})^2$, при верной нулевой гипотезе имеет распределение Фишера-Снедекора со степенями свободы $m$ и $n-m-1$\n",
+    "Статистика критерия: $F_н=\\dfrac{D_{факт}}{D_{остат}}=\\dfrac{RSS/m}{ESS/(n-m-1)}$, где m - количество факторов$(m=1)$. $RSS= \\sum (\\hat{y_i}-y_{avg})^2$ $ESS= \\sum (y_i - \\hat{y_i})^2$, при верной нулевой гипотезе имеет распределение Фишера-Снедекора со степенями свободы $m$ и $n-m-1$\n",
     "\n",
     "Критическая статистика - квантиль распределения Фишера-Снедекора с вышеупомянутыми степенями свободы и с заданным уровнем значимости $\\alpha$\n",
     "\n",
@@ -266,13 +266,13 @@
     "\n",
     "$H_1: \\theta_i \\neq 0$\n",
     "\n",
-    "Статистика $t_н=\\dfrac{\\theta_i^{*}}{S_{\\theta_i}}$, где $S_{\\theta_i}$ - стандартная ошибка коэффициента, $S_a = \\dfrac{s * \\sqrt{\\sum x_i^2}}{\\sqrt{n \\sum (x_i - x_{avg})^2}}$, $S_b = \\dfrac{s}{\\sqrt{n \\sum (x_i - x_{avg})^2}}$, $s^2=\\dfrac{ \\sum \\epsilon_i^2 }{n - 2}$, при верной нулевой гипотезе имеет распределение Стьюдента с n-2 степенями свободы.\n",
+    "Статистика $t_н=\\dfrac{\\hat{\\theta_i}}{S_{\\theta_i}}$, где $S_{\\theta_i}$ - стандартная ошибка коэффициента, $S_a = \\dfrac{s * \\sqrt{\\sum x_i^2}}{\\sqrt{n \\sum (x_i - x_{avg})^2}}$, $S_b = \\dfrac{s}{\\sqrt{n \\sum (x_i - x_{avg})^2}}$, $s^2=\\dfrac{ \\sum \\epsilon_i^2 }{n - 2}$, при верной нулевой гипотезе имеет распределение Стьюдента с n-2 степенями свободы.\n",
     "\n",
     "Расчет критического значения и проверка гипотез аналогичны оным при проверке значимости коэффициента корреляции Пирсона.\n",
     "\n",
     "### Средняя ошибка аппроксимации\n",
     "\n",
-    "$A_{avg}=\\dfrac{1}{n} \\sum |\\dfrac{y_i-y_i^{*}}{y_i}|*100$%\n",
+    "$A_{avg}=\\dfrac{1}{n} \\sum |\\dfrac{y_i-\\hat{y_i}}{y_i}|*100$%\n",
     "\n",
     "Показывает, на сколько % в среднем модель ошибается в расчетах\n",
     "\n",
@@ -287,8 +287,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.584961Z",
-     "start_time": "2025-10-30T00:30:35.579608Z"
+     "end_time": "2025-10-30T00:38:37.261860Z",
+     "start_time": "2025-10-30T00:38:37.255630Z"
     }
    },
    "cell_type": "code",
@@ -339,7 +339,7 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -350,8 +350,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.641456Z",
-     "start_time": "2025-10-30T00:30:35.591969Z"
+     "end_time": "2025-10-30T00:38:37.356152Z",
+     "start_time": "2025-10-30T00:38:37.270864Z"
     }
    },
    "cell_type": "code",
@@ -381,7 +381,7 @@
      }
     }
    ],
-   "execution_count": 66
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -422,8 +422,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.745401Z",
-     "start_time": "2025-10-30T00:30:35.650461Z"
+     "end_time": "2025-10-30T00:38:37.463079Z",
+     "start_time": "2025-10-30T00:38:37.367661Z"
     }
    },
    "cell_type": "code",
@@ -468,13 +468,13 @@
      }
     }
    ],
-   "execution_count": 67
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.753406Z",
-     "start_time": "2025-10-30T00:30:35.748406Z"
+     "end_time": "2025-10-30T00:38:37.472085Z",
+     "start_time": "2025-10-30T00:38:37.467086Z"
     }
    },
    "cell_type": "code",
@@ -502,7 +502,7 @@
      ]
     }
    ],
-   "execution_count": 68
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -527,8 +527,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.767850Z",
-     "start_time": "2025-10-30T00:30:35.758875Z"
+     "end_time": "2025-10-30T00:38:37.487832Z",
+     "start_time": "2025-10-30T00:38:37.478540Z"
     }
    },
    "cell_type": "code",
@@ -546,7 +546,7 @@
    ],
    "id": "b04002d62925efe3",
    "outputs": [],
-   "execution_count": 69
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -557,8 +557,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.777177Z",
-     "start_time": "2025-10-30T00:30:35.773854Z"
+     "end_time": "2025-10-30T00:38:37.494233Z",
+     "start_time": "2025-10-30T00:38:37.490837Z"
     }
    },
    "cell_type": "code",
@@ -582,7 +582,7 @@
      ]
     }
    ],
-   "execution_count": 70
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -593,8 +593,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.793323Z",
-     "start_time": "2025-10-30T00:30:35.790852Z"
+     "end_time": "2025-10-30T00:38:37.505240Z",
+     "start_time": "2025-10-30T00:38:37.502239Z"
     }
    },
    "cell_type": "code",
@@ -619,13 +619,13 @@
      ]
     }
    ],
-   "execution_count": 71
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-30T00:30:35.859401Z",
-     "start_time": "2025-10-30T00:30:35.806894Z"
+     "end_time": "2025-10-30T00:38:37.565036Z",
+     "start_time": "2025-10-30T00:38:37.512294Z"
     }
    },
    "cell_type": "code",
@@ -659,7 +659,7 @@
      }
     }
    ],
-   "execution_count": 72
+   "execution_count": 12
   },
   {
    "metadata": {},
