Corrected typo in normaltest explanation

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "$D_{E_s} = \\frac{24n(n-2)(n-3)}{(n+1)^2(n+3)(n+5)}$\n",
     "\n",
-    "$X = \\frac{E_s - E(E_s)}{\\sqrt{\\text{Var}(E_s)}}$\n",
+    "$X = \\frac{E_s - E(E_s)}{\\sqrt{D(E_s)}}$\n",
     "\n",
     "$\\beta_1 = \\frac{6(n^2 - 5n + 2)}{(n+7)(n+9)} \\sqrt{\\frac{6(n+3)(n+5)}{n(n-2)(n-3)}}$\n",
     "\n",
