Replaced * with \cdot where applicable

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "### Далее посчитаем коэффициент корреляции Пирсона:\n",
     "\n",
-    "$r_{x, y}=\\dfrac{1/n*\\sum(y_i-y_{avg})(x_i-x_{avg})}{\\sqrt{1/n*\\sum(x_i-x_{avg})^2}*\\sqrt{1/n*\\sum(y_i-y_{avg})^2}}$\n",
+    "$r_{x, y}=\\dfrac{1/n \\cdot \\sum(y_i-y_{avg})(x_i-x_{avg})}{\\sqrt{1/n \\cdot \\sum(x_i-x_{avg})^2} \\cdot \\sqrt{1/n \\cdot \\sum(y_i-y_{avg})^2}}$\n",
     "\n",
     "### Значимость коэффициента проверяется с помощью критерия Стьюдента:\n",
     "\n",
@@ -167,7 +167,7 @@
     "\n",
     "$H_1: r_{x, y} \\neq 0$ коэффициент статистически значим\n",
     "\n",
-    "Статистика: $t_н = \\dfrac{|r|*\\sqrt{n-2}}{\\sqrt{1-r^2}}$ При верной нулевой гипотезе имеет распределение Стьюдента с n-2 степенями свободы.\n",
+    "Статистика: $t_н = \\dfrac{|r| \\cdot \\sqrt{n-2}}{\\sqrt{1-r^2}}$ При верной нулевой гипотезе имеет распределение Стьюдента с n-2 степенями свободы.\n",
     "\n",
     "Критическое значение для уровня значимости $\\alpha$: $t_{кр}(\\alpha, n-2)$ - квантиль распределения стьюдента с $n-2$ степенями свободы для уровня значимости $\\alpha$.\n",
     "\n",
@@ -266,19 +266,19 @@
     "\n",
     "$H_1: \\theta_i \\neq 0$\n",
     "\n",
-    "Статистика $t_н=\\dfrac{\\hat{\\theta_i}}{S_{\\theta_i}}$, где $S_{\\theta_i}$ - стандартная ошибка коэффициента, $S_a = \\dfrac{s * \\sqrt{\\sum x_i^2}}{\\sqrt{n \\sum (x_i - x_{avg})^2}}$, $S_b = \\dfrac{s}{\\sqrt{n \\sum (x_i - x_{avg})^2}}$, $s^2=\\dfrac{ \\sum \\epsilon_i^2 }{n - 2}$, при верной нулевой гипотезе имеет распределение Стьюдента с n-2 степенями свободы.\n",
+    "Статистика $t_н=\\dfrac{\\hat{\\theta_i}}{S_{\\theta_i}}$, где $S_{\\theta_i}$ - стандартная ошибка коэффициента, $S_a = \\dfrac{s  \\cdot  \\sqrt{\\sum x_i^2}}{\\sqrt{n \\sum (x_i - x_{avg})^2}}$, $S_b = \\dfrac{s}{\\sqrt{n \\sum (x_i - x_{avg})^2}}$, $s^2=\\dfrac{ \\sum \\epsilon_i^2 }{n - 2}$, при верной нулевой гипотезе имеет распределение Стьюдента с n-2 степенями свободы.\n",
     "\n",
     "Расчет критического значения и проверка гипотез аналогичны оным при проверке значимости коэффициента корреляции Пирсона.\n",
     "\n",
     "### Средняя ошибка аппроксимации\n",
     "\n",
-    "$A_{avg}=\\dfrac{1}{n} \\sum |\\dfrac{y_i-\\hat{y_i}}{y_i}|*100$%\n",
+    "$A_{avg}=\\dfrac{1}{n} \\sum |\\dfrac{y_i-\\hat{y_i}}{y_i}| \\cdot 100$%\n",
     "\n",
     "Показывает, на сколько % в среднем модель ошибается в расчетах\n",
     "\n",
     "### Средняя эластичность\n",
     "\n",
-    "$E_{avg} = b*\\dfrac{x_{avg}}{y_{avg}}$\n",
+    "$E_{avg} = b \\cdot \\dfrac{x_{avg}}{y_{avg}}$\n",
     "\n",
     "Показывает, на сколько % в среднем увеличивается $y$, если увеличить $x$ на 1%"
    ],
@@ -413,7 +413,7 @@
     "$H_1: \\sigma_{\\epsilon} \\neq const$\n",
     "\n",
     "1. Строится первичная регрессия, находится ряд остатков\n",
-    "2. Строится регрессия $\\epsilon_i^2$ на константу, $x_i$, $x_i^2$ $x_i*x_j$\n",
+    "2. Строится регрессия $\\epsilon_i^2$ на константу, $x_i$, $x_i^2$ $x_i \\cdot x_j$\n",
     "3. Статистика критерия: $\\chi^2_н=nR^2$ при верной нулевой гипотезе имеет распределение $\\chi^2$ с $m-1$ степенями свободы, где $m$ - количество регрессоров во вторичной модели\n",
     "4. Если $\\chi^2_н>\\chi^2_{кр}$, то нулевая гипотеза отвергается и имеется гетероскедастичность"
    ],
